--- a/template.yaml
+++ b/template.yaml
@@ -5,7 +5,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       CodeUri: ./dist/
-      Handler: index.handler
+      Handler: probe.handler
       Runtime: nodejs18.x
       Timeout: 300
       MemorySize: 512
